Refactor TaskManagerCriticalTest to use getFirst() for subtask ID retrieval